--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "remix build && vite build",
+    "build": "npx remix build && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -23,6 +23,7 @@
     "@remix-run/react": "^2.16.4",
     "@remix-run/serve": "^2.16.4",
     "axios": "^1.6.7",
+    "isbot": "^4",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,12 +32,14 @@
     "remix-router": "^0.1.0"
   },
   "devDependencies": {
+    "@remix-run/dev": "^2.16.4",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "remix": "^2.16.4",
     "vite": "^5.1.0"
   }
 }
