--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx remix build && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -23,7 +23,6 @@
     "@remix-run/react": "^2.16.4",
     "@remix-run/serve": "^2.16.4",
     "axios": "^1.6.7",
-    "isbot": "^4",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +31,6 @@
     "remix-router": "^0.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.16.4",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
