--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "glob": "^11.0.1",
     "remix": "^2.16.4",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.38.0",
     "vite": "^5.4.16"
   }
 }
